Products/ZenUI3/browser/resources/css/xtheme-zenoss.css
/* ... */
.x-panel-header .desc {
    margin-left: 5px;
    font-weight: normal;
    color: #abc;
}

.x-panel-body{
    border-color:#abc;
}
.x-panel-bbar .x-toolbar{
    border-color:#abc;
}
.x-panel-tbar .x-toolbar{
    border-color:#abc;
}
.x-panel-tbar-noheader .x-toolbar, .x-panel-mc .x-panel-tbar .x-toolbar{
    border-color:#abc;
}
.x-panel-body-noheader, .x-panel-mc .x-panel-body{
    border-color:#abc;
}
.x-panel-tl .x-panel-header{
    color:#f4f4f4;
}
.x-panel-tc{
    background-image:url(../img/xtheme-zenoss/panel/top-bottom.gif);
}
.x-panel-tl{
    background-image:url(../img/xtheme-zenoss/panel/corners-sprite.gif);
    border-color:#abc;
}
.x-panel-tr{
    background-image:url(../img/xtheme-zenoss/panel/corners-sprite.gif);
}
.x-panel-bc{
    background-image:url(../img/xtheme-zenoss/panel/top-bottom.gif);
}
.x-panel-bl{
    background-image:url(../img/xtheme-zenoss/panel/corners-sprite.gif);
}
.x-panel-br{
    background-image:url(../img/xtheme-zenoss/panel/corners-sprite.gif);
}
.x-panel-mc{
    background:#dde5e9;
}
.x-panel-mc .x-panel-body{
    background:transparent;
    border:0 none;
}
.x-panel-ml{
    background-image:url(../img/xtheme-zenoss/panel/left-right.gif);
}
.x-panel-mr{
    background-image:url(../img/xtheme-zenoss/panel/left-right.gif);
}
.x-panel-dd-spacer{
    border:2px dashed #89a;
}
.x-tool{
    background-image:url(../img/xtheme-zenoss/panel/tool-sprites.gif);
}
.x-panel-ghost{
    background:#222;
}
.x-panel-ghost .x-window-header-text {
    font-size: 12px;
}
.x-panel-ghost ul{
    border-color:#b0b0b0;
}


/* Windows */

.x-window-proxy{
    background:#e4e8ec;
    border-color:#abc;
}
.x-window-tl .x-window-header{
    color:#fafafa;
}
.x-window-tc{
    background-image:url(../img/xtheme-zenoss/window/top-bottom.png);
}
.x-window-tl{
    background-image:url(../img/xtheme-zenoss/window/left-corners.png);
}
.x-window-tr{
    background-image:url(../img/xtheme-zenoss/window/right-corners.png);
}
.x-window-bc{
    background-image:url(../img/xtheme-zenoss/window/top-bottom.png);
}
.x-window-bl{
    background-image:url(../img/xtheme-zenoss/window/left-corners.png);
}
.x-window-br{
    background-image:url(../img/xtheme-zenoss/window/right-corners.png);
}
.x-window-mc{
    font-family: helvetica,tahoma,sans-serif;
    color: #fafafa;
    font-size: 12px;
}

.x-window-ml{
    background-image:url(../img/xtheme-zenoss/window/left-right.png);
}
.x-window-mr{
    background-image:url(../img/xtheme-zenoss/window/left-right.png);
}
.x-panel-ghost .x-window-tl{
    border-color:#abc;
}

.x-panel-collapsed .x-window-tl{
    border-color:#abc;
}

.x-window-body .x-panel-body {
    background-color: transparent;
}
.x-window-plain .x-window-mc{
    padding-top: 12px;
    border: medium none !important;
    background: transparent url(../img/xtheme-zenoss/window/left-right.png);
}

.x-window-plain .x-window-body{
    border: medium none !important;
    background: transparent url() !important;
}

.x-window-ghost .x-window-tl .x-window-header,
.x-window-tl .x-window-header {
    color: #fafafa;
    font-family: helvetica,tahoma,sans-serif;
    text-align: left;
    font-size: 13pt;
    height: 21px;
    line-height: 21px;
    font-weight: bold;
}
body.x-body-masked .x-window-mc, body.x-body-masked .x-window-plain .x-window-mc{
    background: transparent url(../img/xtheme-zenoss/window/left-right.png) repeat;
}

.x-window-header .x-tool-close {
    background: transparent url(../img/xtheme-zenoss/window/close-button.png) no-repeat;
}

.x-panel-btns-ct {
    padding: 10px;
}

/* Flares */

.x-flare {
    width: 100%;
    height: 30px;
    line-height: 30px;
    color: #282828;
    font-size: 11px;
    padding-left: 15px;
    background: rgb(246, 225, 123);
    overflow: hidden;
    border-top: 1px solid #f0f0f0;
    border-bottom: 1px solid #949494;
}

.x-flare .x-tool-close {
    width: 30px;
    height: 30px;
    background: url(../img/xtheme-zenoss/flare/flare-sprite.png) no-repeat 0 -60px;
}

.x-flare .x-flare-header {
    background: url(../img/xtheme-zenoss/flare/flare-sprite.png) no-repeat 0 -31px;
    float: right;
    height: 30px;
    width: 45px;
}

.x-flare .x-flare-icon {
    float: left;
    background:url(../img/xtheme-zenoss/icon/severity-sprite.png) no-repeat scroll 0 -100px;
    width: 16px;
    height: 14px;
    margin-top: 7px;
    margin-right: 5px;
}

.x-flare .x-flare-critical .x-flare-icon { background-position: 0px  0px; }
.x-flare .x-flare-error .x-flare-icon    { background-position: 0px -20px; }
.x-flare .x-flare-warning .x-flare-icon  { background-position: 0px -40px; }
.x-flare .x-flare-info .x-flare-icon     { background-position: 0px -60px; }
.x-flare .x-flare-debug .x-flare-icon    { background-position: 0px -80px; }
.x-flare .x-flare-success .x-flare-icon  { background-position: 0 -100px; }

/* HTML Editors */

.x-html-editor-wrap{
    border-color:#abc;
}
.x-html-editor-tb .x-btn-text{
    background:transparent url(../img/xtheme-zenoss/editor/tb-sprite.gif) no-repeat scroll 0%;
}


/* Panel Borders */

.x-panel-noborder .x-panel-body-noborder{
   border-width:0;
}
.x-panel-noborder .x-panel-header-noborder{
    border-width:0;
    border-bottom:1px solid #abc;
}
.x-panel-noborder .x-panel-tbar-noborder .x-toolbar{
    border-width:0;
    border-bottom:1px solid #abc;
}
.x-panel-noborder .x-panel-bbar-noborder .x-toolbar{
    border-width:0;
    border-top:1px solid #abc;
}
.x-window-noborder .x-window-mc{
    border-width:0;
}
.x-window-plain .x-window-body-noborder{
    border-width:0;
}
.x-tab-panel-noborder .x-tab-panel-body-noborder{
    border-width:0;
}
.x-tab-panel-noborder .x-tab-panel-header-noborder{
    border-top-width:0;
    border-left-width:0;
    border-right-width:0;
}
.x-tab-panel-noborder .x-tab-panel-footer-noborder{
    border-bottom-width:0;
    border-left-width:0;
    border-right-width:0;
}
.x-tab-panel-bbar-noborder .x-toolbar{
    border-width:0;
    border-top:1px solid #abc;
}
/* ... */

